Fixed alignment

--- a/src/app/components/hris/charts/charts.component.css
+++ b/src/app/components/hris/charts/charts.component.css
@@ -58,11 +58,13 @@
 }
 
 .icon-width-mobile {
-  width: 3rem !important;
+  /* width: 3rem !important; */
+  width: 65px !important;
+  height: 1rem !important;
 }
 
 .icon-width-tablet {
-  width: 90px !important;
+  width: 65px !important;
   height: 1rem !important;
 }
 
